# PRIMER_PROYECTO_NEUMONIA

./: .dockerignore  .gitignore  COHESION_ACOPLAMIENTO.md  Dockerfile  LICENSE  README.md  REFACTOR_SUMMARY.md  api.py  cli.py  detector_neumonia.py  docker-compose.yml  gui.py  pyproject.toml  requirements-docker.txt  requirements.txt
imagenes/: .gitkeep
outputs/: .gitkeep  README.md
outputs/heatmaps/: .gitkeep
outputs/reports/: .gitkeep
src/: __init__.py
src/integration/: __init__.py  integrator.py
src/models/: __init__.py  load_model.py
src/processing/: __init__.py  grad_cam.py  preprocess_img.py  read_img.py
static/: index.html
test/: test_grad_cam.py  test_read_img.py
tests/: __init__.py  test_grad_cam.py  test_preproccess.py  test_read_img.py
