[project]
name = "uao-neumonia"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pydicom>=3.0.1",
    "python-xlib>=0.33",
    "tensorflow==2.16.2",
    "tkcap>=0.0.4",
]
